Fix droplist name slicing and width issues (#649)
Fix exam room title/location display overlap issues

--- a/ui/src/app/assets/styles/partial/_defines.scss
+++ b/ui/src/app/assets/styles/partial/_defines.scss
@@ -851,6 +851,10 @@ $sitnet-icon-size: 32px;
   width: 350px !important;
 }
 
+.max-w-100perc{
+  max-width: 100% !important;
+}
+
 .unstyled-link, .unstyled-link:hover, .unstyled-link:active {
   text-decoration: none;
   color: initial;
